@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.37">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.38">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -24,9 +24,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.37 [20230301]:
-- Added New Setting "Disable Scraping Screen Fanart" 
-- Added New Setting "Disable Scraping Screen Clearlogo"
+Changelog 0.3.38 [20230301]:
+- Disable Nyaa properly based on settings
     </news>
   </extension>
 </addon>
